# Flux-CRM

./: README.md
backend/: README.md  database.py  main.py  pyproject.toml  requirements.txt
backend/scripts/: run_evals.py
backend/services/: extraction_service.py  stt_service.py
frontend/: README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/fluxcrm/app/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/public/: eval_results.json  manifest.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  DataDisplay.jsx  InstallPrompt.jsx  OfflineIndicator.jsx  Recorder.jsx  UpdatePrompt.jsx
